# framepix

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig  secure_boot_signing_key.pem
components/esp_http_server_cxx/: CMakeLists.txt  idf_component.yml
components/esp_http_server_cxx/include/: FormParser.hpp  HttpRequest.hpp  HttpResponse.hpp  HttpServer.hpp  HttpUri.hpp
components/esp_http_server_cxx/src/: HttpServer.cpp
components/esp_wifi_manager_cxx/: CMakeLists.txt  idf_component.yml
components/esp_wifi_manager_cxx/include/: WifiConfig.hpp  WifiManager.hpp
components/esp_wifi_manager_cxx/src/: WifiManager.cpp
components/led_matrix_cxx/: CMakeLists.txt  idf_component.yml
components/led_matrix_cxx/include/: LedMatrix.hpp  MatrixAnimator.hpp  PSRAMallocator.hpp  led_strip_encoder.h
components/led_matrix_cxx/src/: LedMatrix.cpp  MatrixAnimator.cpp
components/spiffs_cxx/: CMakeLists.txt  idf_component.yml
components/spiffs_cxx/include/: Spiffs.hpp
components/spiffs_cxx/src/: Spiffs.cpp
main/: CMakeLists.txt  FramepixServer.cpp  FramepixServer.hpp  LedMatrix.cpp  LedMatrix.hpp  MatrixAnimator.cpp  StorageManager.cpp  StorageManager.hpp  WifiProvisioningWeb.cpp  WifiProvisioningWeb.hpp  led_strip_encoder.c  main.cpp
main/web_interface/: designer.html  script.js  wifi_login.html
main/web_interface/css/: styles.css
